// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Workflows>
  <div>
    <WorkflowListNavBar>
      <div>
        <nav
          className="navbar"
        >
          <div
            className="navbar-brand d-flex flex-row align-items-center"
          >
            <img
              className="logo"
              src="/static/images/logo.png"
            />
            <h1
              className="mb-0 mr-auto title-2"
            >
              <a
                href="http://cjworkbench.org"
              >
                Workbench
              </a>
            </h1>
          </div>
          <div
            className="d-flex flex-row align-items-center"
          >
            <a
              className="t-white content-2 mr-5"
              href="http://cjworkbench.org/index.php/blog/"
            >
              Learn
            </a>
            <WfHamburgerMenu>
              <UncontrolledDropdown>
                <Dropdown
                  isOpen={false}
                  tag="div"
                  toggle={[Function]}
                >
                  <div
                    className="dropdown"
                  >
                    <DropdownToggle
                      aria-haspopup={true}
                      className="navbar-context-button"
                      color="secondary"
                      data-toggle="dropdown"
                    >
                      <Button
                        aria-expanded={false}
                        aria-haspopup="true"
                        className="navbar-context-button"
                        color="secondary"
                        data-toggle="dropdown"
                        onClick={[Function]}
                        tag="button"
                      >
                        <button
                          aria-expanded={false}
                          aria-haspopup="true"
                          className="navbar-context-button btn btn-secondary"
                          data-toggle="dropdown"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="button-icon icon-more-white"
                          />
                        </button>
                      </Button>
                    </DropdownToggle>
                    <DropdownMenu
                      right={true}
                      tag="div"
                    >
                      <div
                        aria-hidden={true}
                        className="dropdown-menu dropdown-menu-right"
                        role="menu"
                        tabIndex="-1"
                      >
                        <div>
                          <DropdownItem
                            className="dropdown-menu-item"
                            href="http://blog.cjworkbench.org"
                            tag="a"
                            toggle={true}
                          >
                            <a
                              className="dropdown-menu-item dropdown-item"
                              href="http://blog.cjworkbench.org"
                              onClick={[Function]}
                              tabIndex="0"
                            >
                              <span
                                className="t-d-gray content-3 ml-3"
                              >
                                Help
                              </span>
                            </a>
                          </DropdownItem>
                          <DropdownItem
                            className="dropdown-menu-item"
                            href="/account/logout"
                            tag="a"
                            toggle={true}
                          >
                            <a
                              className="dropdown-menu-item dropdown-item"
                              href="/account/logout"
                              onClick={[Function]}
                              tabIndex="0"
                            >
                              <span
                                className="t-d-gray content-3 ml-3"
                              >
                                Logout
                              </span>
                            </a>
                          </DropdownItem>
                        </div>
                      </div>
                    </DropdownMenu>
                  </div>
                </Dropdown>
              </UncontrolledDropdown>
            </WfHamburgerMenu>
          </div>
        </nav>
      </div>
    </WorkflowListNavBar>
    <div
      className="container workflows-container"
    >
      <div
        className="row justify-content-md-center"
      >
        <div
          className="col col-lg-2"
        />
        <div
          className="col-12 col-md-auto"
        >
          <div
            className="input-group"
          >
            <span
              className="input-group-btn"
            >
              <div
                className="button-blue action-button new-workflow-button"
                onClick={[Function]}
              >
                New
              </div>
            </span>
          </div>
        </div>
        <div
          className="col col-lg-2"
        />
      </div>
      <div
        className="card w-75 mx-auto workflows-list"
        style={
          Object {
            "backgroundColor": "#f6f6f6",
          }
        }
      >
        <div
          className="card-block"
        >
          <h3
            className="card-title title-2 t-d-gray workflows-card-title"
          >
            Workflows
          </h3>
          <div
            className="workflows-sub-list"
          />
        </div>
      </div>
    </div>
  </div>
</Workflows>
`;

exports[`renders correctly 2`] = `
<Workflows>
  <div>
    <WorkflowListNavBar>
      <div>
        <nav
          className="navbar"
        >
          <div
            className="navbar-brand d-flex flex-row align-items-center"
          >
            <img
              className="logo"
              src="/static/images/logo.png"
            />
            <h1
              className="mb-0 mr-auto title-2"
            >
              <a
                href="http://cjworkbench.org"
              >
                Workbench
              </a>
            </h1>
          </div>
          <div
            className="d-flex flex-row align-items-center"
          >
            <a
              className="t-white content-2 mr-5"
              href="http://cjworkbench.org/index.php/blog/"
            >
              Learn
            </a>
            <WfHamburgerMenu>
              <UncontrolledDropdown>
                <Dropdown
                  isOpen={false}
                  tag="div"
                  toggle={[Function]}
                >
                  <div
                    className="dropdown"
                  >
                    <DropdownToggle
                      aria-haspopup={true}
                      className="navbar-context-button"
                      color="secondary"
                      data-toggle="dropdown"
                    >
                      <Button
                        aria-expanded={false}
                        aria-haspopup="true"
                        className="navbar-context-button"
                        color="secondary"
                        data-toggle="dropdown"
                        onClick={[Function]}
                        tag="button"
                      >
                        <button
                          aria-expanded={false}
                          aria-haspopup="true"
                          className="navbar-context-button btn btn-secondary"
                          data-toggle="dropdown"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="button-icon icon-more-white"
                          />
                        </button>
                      </Button>
                    </DropdownToggle>
                    <DropdownMenu
                      right={true}
                      tag="div"
                    >
                      <div
                        aria-hidden={true}
                        className="dropdown-menu dropdown-menu-right"
                        role="menu"
                        tabIndex="-1"
                      >
                        <div>
                          <DropdownItem
                            className="dropdown-menu-item"
                            href="http://blog.cjworkbench.org"
                            tag="a"
                            toggle={true}
                          >
                            <a
                              className="dropdown-menu-item dropdown-item"
                              href="http://blog.cjworkbench.org"
                              onClick={[Function]}
                              tabIndex="0"
                            >
                              <span
                                className="t-d-gray content-3 ml-3"
                              >
                                Help
                              </span>
                            </a>
                          </DropdownItem>
                          <DropdownItem
                            className="dropdown-menu-item"
                            href="/account/logout"
                            tag="a"
                            toggle={true}
                          >
                            <a
                              className="dropdown-menu-item dropdown-item"
                              href="/account/logout"
                              onClick={[Function]}
                              tabIndex="0"
                            >
                              <span
                                className="t-d-gray content-3 ml-3"
                              >
                                Logout
                              </span>
                            </a>
                          </DropdownItem>
                        </div>
                      </div>
                    </DropdownMenu>
                  </div>
                </Dropdown>
              </UncontrolledDropdown>
            </WfHamburgerMenu>
          </div>
        </nav>
      </div>
    </WorkflowListNavBar>
    <div
      className="container workflows-container"
    >
      <div
        className="row justify-content-md-center"
      >
        <div
          className="col col-lg-2"
        />
        <div
          className="col-12 col-md-auto"
        >
          <div
            className="input-group"
          >
            <span
              className="input-group-btn"
            >
              <div
                className="button-blue action-button new-workflow-button"
                onClick={[Function]}
              >
                New
              </div>
            </span>
          </div>
        </div>
        <div
          className="col col-lg-2"
        />
      </div>
      <div
        className="card w-75 mx-auto workflows-list"
        style={
          Object {
            "backgroundColor": "#f6f6f6",
          }
        }
      >
        <div
          className="card-block"
        >
          <h3
            className="card-title title-2 t-d-gray workflows-card-title"
          >
            Workflows
          </h3>
          <div
            className="workflows-sub-list"
          >
            <div
              className="card card-block item-test-class workflow-in-list"
            >
              <a
                className="my-auto workflow-link"
                href="/workflows/1"
              >
                <div
                  className="d-flex justify-content-between"
                >
                  <span
                    className="t-d-gray title-4 mt-2"
                  >
                    Charting
                  </span>
                  <div
                    className="menu-test-class"
                    onClick={[Function]}
                  >
                    <WfContextMenu
                      deleteWorkflow={[Function]}
                    >
                      <UncontrolledDropdown>
                        <Dropdown
                          isOpen={false}
                          tag="div"
                          toggle={[Function]}
                        >
                          <div
                            className="dropdown"
                          >
                            <DropdownToggle
                              aria-haspopup={true}
                              className="context-button"
                              color="secondary"
                              data-toggle="dropdown"
                            >
                              <Button
                                aria-expanded={false}
                                aria-haspopup="true"
                                className="context-button"
                                color="secondary"
                                data-toggle="dropdown"
                                onClick={[Function]}
                                tag="button"
                              >
                                <button
                                  aria-expanded={false}
                                  aria-haspopup="true"
                                  className="context-button btn btn-secondary"
                                  data-toggle="dropdown"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <div
                                    className="button-icon icon-more"
                                  />
                                </button>
                              </Button>
                            </DropdownToggle>
                            <DropdownMenu
                              className="dropdown-menu"
                              right={true}
                              tag="div"
                            >
                              <div
                                aria-hidden={true}
                                className="dropdown-menu dropdown-menu dropdown-menu-right"
                                role="menu"
                                tabIndex="-1"
                              >
                                <DropdownItem
                                  className="dropdown-menu-item"
                                  onClick={[Function]}
                                  tag="button"
                                  toggle={true}
                                >
                                  <button
                                    className="dropdown-menu-item dropdown-item"
                                    onClick={[Function]}
                                    tabIndex="0"
                                    type="button"
                                  >
                                    <i
                                      className="icon-share button-icon"
                                    />
                                    <span
                                      className="t-d-gray content-3 ml-3"
                                    >
                                      Share
                                    </span>
                                  </button>
                                </DropdownItem>
                                <DropdownItem
                                  className="dropdown-menu-item"
                                  onClick={[Function]}
                                  tag="button"
                                  toggle={true}
                                >
                                  <button
                                    className="dropdown-menu-item dropdown-item"
                                    onClick={[Function]}
                                    tabIndex="0"
                                    type="button"
                                  >
                                    <i
                                      className="icon-bin button-icon"
                                    />
                                    <span
                                      className="t-d-gray content-3 ml-3"
                                    >
                                      Delete
                                    </span>
                                  </button>
                                </DropdownItem>
                              </div>
                            </DropdownMenu>
                          </div>
                        </Dropdown>
                      </UncontrolledDropdown>
                    </WfContextMenu>
                  </div>
                </div>
              </a>
            </div>
            <div
              className="card card-block item-test-class workflow-in-list"
            >
              <a
                className="my-auto workflow-link"
                href="/workflows/7"
              >
                <div
                  className="d-flex justify-content-between"
                >
                  <span
                    className="t-d-gray title-4 mt-2"
                  >
                    Messy data cleanup
                  </span>
                  <div
                    className="menu-test-class"
                    onClick={[Function]}
                  >
                    <WfContextMenu
                      deleteWorkflow={[Function]}
                    >
                      <UncontrolledDropdown>
                        <Dropdown
                          isOpen={false}
                          tag="div"
                          toggle={[Function]}
                        >
                          <div
                            className="dropdown"
                          >
                            <DropdownToggle
                              aria-haspopup={true}
                              className="context-button"
                              color="secondary"
                              data-toggle="dropdown"
                            >
                              <Button
                                aria-expanded={false}
                                aria-haspopup="true"
                                className="context-button"
                                color="secondary"
                                data-toggle="dropdown"
                                onClick={[Function]}
                                tag="button"
                              >
                                <button
                                  aria-expanded={false}
                                  aria-haspopup="true"
                                  className="context-button btn btn-secondary"
                                  data-toggle="dropdown"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <div
                                    className="button-icon icon-more"
                                  />
                                </button>
                              </Button>
                            </DropdownToggle>
                            <DropdownMenu
                              className="dropdown-menu"
                              right={true}
                              tag="div"
                            >
                              <div
                                aria-hidden={true}
                                className="dropdown-menu dropdown-menu dropdown-menu-right"
                                role="menu"
                                tabIndex="-1"
                              >
                                <DropdownItem
                                  className="dropdown-menu-item"
                                  onClick={[Function]}
                                  tag="button"
                                  toggle={true}
                                >
                                  <button
                                    className="dropdown-menu-item dropdown-item"
                                    onClick={[Function]}
                                    tabIndex="0"
                                    type="button"
                                  >
                                    <i
                                      className="icon-share button-icon"
                                    />
                                    <span
                                      className="t-d-gray content-3 ml-3"
                                    >
                                      Share
                                    </span>
                                  </button>
                                </DropdownItem>
                                <DropdownItem
                                  className="dropdown-menu-item"
                                  onClick={[Function]}
                                  tag="button"
                                  toggle={true}
                                >
                                  <button
                                    className="dropdown-menu-item dropdown-item"
                                    onClick={[Function]}
                                    tabIndex="0"
                                    type="button"
                                  >
                                    <i
                                      className="icon-bin button-icon"
                                    />
                                    <span
                                      className="t-d-gray content-3 ml-3"
                                    >
                                      Delete
                                    </span>
                                  </button>
                                </DropdownItem>
                              </div>
                            </DropdownMenu>
                          </div>
                        </Dropdown>
                      </UncontrolledDropdown>
                    </WfContextMenu>
                  </div>
                </div>
              </a>
            </div>
            <div
              className="card card-block item-test-class workflow-in-list"
            >
              <a
                className="my-auto workflow-link"
                href="/workflows/8"
              >
                <div
                  className="d-flex justify-content-between"
                >
                  <span
                    className="t-d-gray title-4 mt-2"
                  >
                    Document search
                  </span>
                  <div
                    className="menu-test-class"
                    onClick={[Function]}
                  >
                    <WfContextMenu
                      deleteWorkflow={[Function]}
                    >
                      <UncontrolledDropdown>
                        <Dropdown
                          isOpen={false}
                          tag="div"
                          toggle={[Function]}
                        >
                          <div
                            className="dropdown"
                          >
                            <DropdownToggle
                              aria-haspopup={true}
                              className="context-button"
                              color="secondary"
                              data-toggle="dropdown"
                            >
                              <Button
                                aria-expanded={false}
                                aria-haspopup="true"
                                className="context-button"
                                color="secondary"
                                data-toggle="dropdown"
                                onClick={[Function]}
                                tag="button"
                              >
                                <button
                                  aria-expanded={false}
                                  aria-haspopup="true"
                                  className="context-button btn btn-secondary"
                                  data-toggle="dropdown"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <div
                                    className="button-icon icon-more"
                                  />
                                </button>
                              </Button>
                            </DropdownToggle>
                            <DropdownMenu
                              className="dropdown-menu"
                              right={true}
                              tag="div"
                            >
                              <div
                                aria-hidden={true}
                                className="dropdown-menu dropdown-menu dropdown-menu-right"
                                role="menu"
                                tabIndex="-1"
                              >
                                <DropdownItem
                                  className="dropdown-menu-item"
                                  onClick={[Function]}
                                  tag="button"
                                  toggle={true}
                                >
                                  <button
                                    className="dropdown-menu-item dropdown-item"
                                    onClick={[Function]}
                                    tabIndex="0"
                                    type="button"
                                  >
                                    <i
                                      className="icon-share button-icon"
                                    />
                                    <span
                                      className="t-d-gray content-3 ml-3"
                                    >
                                      Share
                                    </span>
                                  </button>
                                </DropdownItem>
                                <DropdownItem
                                  className="dropdown-menu-item"
                                  onClick={[Function]}
                                  tag="button"
                                  toggle={true}
                                >
                                  <button
                                    className="dropdown-menu-item dropdown-item"
                                    onClick={[Function]}
                                    tabIndex="0"
                                    type="button"
                                  >
                                    <i
                                      className="icon-bin button-icon"
                                    />
                                    <span
                                      className="t-d-gray content-3 ml-3"
                                    >
                                      Delete
                                    </span>
                                  </button>
                                </DropdownItem>
                              </div>
                            </DropdownMenu>
                          </div>
                        </Dropdown>
                      </UncontrolledDropdown>
                    </WfContextMenu>
                  </div>
                </div>
              </a>
            </div>
            <div
              className="card card-block item-test-class workflow-in-list"
            >
              <a
                className="my-auto workflow-link"
                href="/workflows/9"
              >
                <div
                  className="d-flex justify-content-between"
                >
                  <span
                    className="t-d-gray title-4 mt-2"
                  >
                    Visualization
                  </span>
                  <div
                    className="menu-test-class"
                    onClick={[Function]}
                  >
                    <WfContextMenu
                      deleteWorkflow={[Function]}
                    >
                      <UncontrolledDropdown>
                        <Dropdown
                          isOpen={false}
                          tag="div"
                          toggle={[Function]}
                        >
                          <div
                            className="dropdown"
                          >
                            <DropdownToggle
                              aria-haspopup={true}
                              className="context-button"
                              color="secondary"
                              data-toggle="dropdown"
                            >
                              <Button
                                aria-expanded={false}
                                aria-haspopup="true"
                                className="context-button"
                                color="secondary"
                                data-toggle="dropdown"
                                onClick={[Function]}
                                tag="button"
                              >
                                <button
                                  aria-expanded={false}
                                  aria-haspopup="true"
                                  className="context-button btn btn-secondary"
                                  data-toggle="dropdown"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <div
                                    className="button-icon icon-more"
                                  />
                                </button>
                              </Button>
                            </DropdownToggle>
                            <DropdownMenu
                              className="dropdown-menu"
                              right={true}
                              tag="div"
                            >
                              <div
                                aria-hidden={true}
                                className="dropdown-menu dropdown-menu dropdown-menu-right"
                                role="menu"
                                tabIndex="-1"
                              >
                                <DropdownItem
                                  className="dropdown-menu-item"
                                  onClick={[Function]}
                                  tag="button"
                                  toggle={true}
                                >
                                  <button
                                    className="dropdown-menu-item dropdown-item"
                                    onClick={[Function]}
                                    tabIndex="0"
                                    type="button"
                                  >
                                    <i
                                      className="icon-share button-icon"
                                    />
                                    <span
                                      className="t-d-gray content-3 ml-3"
                                    >
                                      Share
                                    </span>
                                  </button>
                                </DropdownItem>
                                <DropdownItem
                                  className="dropdown-menu-item"
                                  onClick={[Function]}
                                  tag="button"
                                  toggle={true}
                                >
                                  <button
                                    className="dropdown-menu-item dropdown-item"
                                    onClick={[Function]}
                                    tabIndex="0"
                                    type="button"
                                  >
                                    <i
                                      className="icon-bin button-icon"
                                    />
                                    <span
                                      className="t-d-gray content-3 ml-3"
                                    >
                                      Delete
                                    </span>
                                  </button>
                                </DropdownItem>
                              </div>
                            </DropdownMenu>
                          </div>
                        </Dropdown>
                      </UncontrolledDropdown>
                    </WfContextMenu>
                  </div>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</Workflows>
`;
